1.9.0 (18)

Added orioles, parakeets, and purple martins.
Added matching bonus game.

*****

1.8.1 (17)

Added statistics.
Fixed a bug that trapped player in ceiling after falling in cave levels in auto-run mode.
Fixed a bird eye menu bug.

*****

1.8.0 (16)

Added birds.
Added glasses.
Added new eyes.
Added menu option to change secondary color of multi-color animals.
Fixed a Monarch Achievement bug; it can now be achieved with the Royal Dress.
Added Demander and Collector Achievements.

*****

1.7.0 (15)

Added pandas.
Added royal dress.
Added new eyes.
Added Consumer Achievement.

*****

1.6.0 (14)

Rock worlds.
Added menu options for difficulty settings.
Added Giant Slayer and Lionheart Achievements.

*****

1.5.3 (13)

Added immersive mode.
Forced auto-run mode if multi-touch feature not detected.
Added infrastructure for adjustable difficulty settings.
Improved consistency of replaying levels.
Added new Achievements.
Added mouse support.
Fixed menu placement bugs.

*****

1.5.2 (12)

Fixed a bug which hid old Profile after creating new Profile on some devices.
Added new Achievements for collecting Gems and hitting blocks.
Added new Goals for blue Gems.

*****

1.5.1 (11)

Fixed graphical bugs in level backgrounds.

*****

1.5.0 (10)

Added underground cave levels.

*****

1.4.0 (9)

Added elephants.
Fixed a bug which awarded certain goals for canceled levels.
Tweaked minecart levels to avoid repeated falls.

*****

1.3.0 (8)

Added dress.
Added helm.
Tweaked minecart levels.
 
*****

1.2.2 (7)

Fixed a NullPointerException.

*****

1.2.1 (6)

Removed TitleScreen's auto-exit due to inactivity.

*****

1.2.0 (5)

Fixed a crash that could result from an empty name.
Fixed a crash caused by letters from other Locales.
Added horses (plus an Achievement related to them).
Added hair bow.
Added Gem Magnet perk.
Added Dragon Stomp perk.
Added minecart levels.
Fixed a clipboard import bug.

*****

1.1.0 (3)

Fixed a depth bug.
Minor bug fixes.